--- a/style.css
+++ b/style.css
@@ -1,35 +1,68 @@
 body {
-	padding : 10px;
+	margin-top: 30px;
+	margin-left: 30px;
 
 }
 p {
-	line-height : 175%;
+	line-height: 175%;
+}
+h4 {
+	margin-bottom: 0px;
 }
 h3 {
-	line-height : 50%;
+	line-height: 50%;
 }
 h1 {
-	line-height : 120%;
+	margin-top: 5px;
+	padding-bottom: 15px;
 }
-select {
-	padding : 3px 7px;
-	text-align : center;
+
+input,textarea {
+	padding: 5px 10px;
 }
-input {
-	padding : 5px 10px;
+input[ type = "radio" ] {
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
+	margin-right: 0.5em;
 }
 table {
-	border-collapse : collapse;
-	border : 3px solid #070;
+	border-collapse: collapse;
+	border: 3px solid #070;
 }
 th,td {
-	border : 1px solid #070;
-	text-align : center;
-	height : 30px;
+	border: 1px solid #070;
+	text-align: center;
+	height: 30px;
+	width: 80px;
 }
 td {
-	height : 40px;
+	height: 40px;
 }
 th {
-	background-color : #ddd;
+	background-color: #ddd;
+}
+.coltsugo {
+	background-color: #ffc
+}
+.colparticipant {
+	background-color: #eff
+}
+.p_comment {
+	text-align: left;
+	padding: 5px;
+	width: 120px;
+	font-size: 12px;
+}
+.delete_day_time {
+	font-size: 20px;
+}
+.delete {
+	color: #fff;
+	background: #f33;
+	padding: 5px;
+	margin-bottom: 5px;
+}
+.float{
+	float: left;
+	margin-right: 50px;
 }
