--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,10 @@
+//smartphone ver
+//PC ver
+
 body {
 	margin-top: 30px;
 	margin-left: 30px;
-
+	background-color:#00ffff;
 }
 p {
 	line-height: 175%;
@@ -29,6 +32,7 @@ input[ type = "radio" ] {
 	transform: scale(1.2);
 	margin-right: 0.5em;
 }
+
 table {
 	border-collapse: collapse;
 	border: 3px solid #070;
@@ -46,10 +50,10 @@ th {
 	background-color: #ddd;
 }
 .coltsugo {
-	background-color: #ffc
+	background-color: #ffc;
 }
 .colparticipant {
-	background-color: #eff
+	background-color: #eff;
 }
 .p_comment {
 	text-align: left;
@@ -70,3 +74,4 @@ th {
 	float: left;
 	margin-right: 50px;
 }
+
