--- a/style.css
+++ b/style.css
@@ -1,26 +1,8 @@
-
-/*@media screen and (max-width: 320px){
-body{
+body {
 	margin-top: 30px;
 	margin-left: 30px;
+
 }
-}*/
-
-/*@media only screen and (min-width: 321px){*/
-
-body{
-	margin-left: 50px;
-	background-color:#0ff;
-}
-
-.main{
-	margin-top : 50px;
-	margin-left: 30px;
-	/*text-align : center;*/
-	display:flex;
-	justify-content: center; /*中央揃え*/
-}
-
 p {
 	line-height: 175%;
 }
@@ -31,33 +13,21 @@ h3 {
 	line-height: 50%;
 }
 h1 {
-	text-align:center;        
+	margin-top: 5px;
+	padding-bottom: 15px;
 }
-
 
 input,textarea {
 	padding: 5px 10px;
-	width : 300px;
-}
-textarea {
-	width: 300px;
-	height: 150px;
 }
 input[ type = "radio" ] {
 	-webkit-transform: scale(1.2);
 	transform: scale(1.2);
 	margin-right: 0.5em;
-	/*margin:80%;*/
 }
-
 table {
 	border-collapse: collapse;
 	border: 3px solid #070;
-	margin-left: auto;	/*テーブルの中央揃え*/
-	margin-right: auto;	/*テーブルの中央揃え*/
-	/*text-align:center;*/
-	/*padding : em;
-	width:100%;*/
 }
 th,td {
 	border: 1px solid #070;
@@ -72,11 +42,10 @@ th {
 	background-color: #ddd;
 }
 .coltsugo {
-	background-color: #ffc;
-
+	background-color: #ffc
 }
 .colparticipant {
-	background-color: #eff;
+	background-color: #eff
 }
 .p_comment {
 	text-align: left;
@@ -93,12 +62,7 @@ th {
 	padding: 5px;
 	margin-bottom: 5px;
 }
-
 .float{
-	float: left;	 /*みぎにまわりこむ*/
+	float: left;
 	margin-right: 50px;
 }
-.center{
-	text-align:center;
-}
-/*}*/
