先ほどのは間違いでした

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,26 @@
-body {
+
+/*@media screen and (max-width: 320px){
+body{
 	margin-top: 30px;
 	margin-left: 30px;
 }
+}*/
+
+/*@media only screen and (min-width: 321px){*/
+
+body{
+	margin-left: 50px;
+	background-color:#0ff;
+}
+
+.main{
+	margin-top : 50px;
+	margin-left: 30px;
+	/*text-align : center;*/
+	display:flex;
+	justify-content: center; /*中央揃え*/
+}
+
 p {
 	line-height: 175%;
 }
@@ -12,26 +31,33 @@ h3 {
 	line-height: 50%;
 }
 h1 {
-	margin-top: 5px;
-	padding-bottom: 15px;
+	text-align:center;        
 }
+
 
 input,textarea {
 	padding: 5px 10px;
+	width : 300px;
 }
 textarea {
-	width: 260px;
+	width: 300px;
 	height: 150px;
 }
 input[ type = "radio" ] {
 	-webkit-transform: scale(1.2);
 	transform: scale(1.2);
 	margin-right: 0.5em;
+	/*margin:80%;*/
 }
 
 table {
 	border-collapse: collapse;
 	border: 3px solid #070;
+	margin-left: auto;	/*テーブルの中央揃え*/
+	margin-right: auto;	/*テーブルの中央揃え*/
+	/*text-align:center;*/
+	/*padding : em;
+	width:100%;*/
 }
 th,td {
 	border: 1px solid #070;
@@ -47,6 +73,7 @@ th {
 }
 .coltsugo {
 	background-color: #ffc;
+
 }
 .colparticipant {
 	background-color: #eff;
@@ -66,7 +93,12 @@ th {
 	padding: 5px;
 	margin-bottom: 5px;
 }
+
 .float{
-	float: left;
+	float: left;	 /*みぎにまわりこむ*/
 	margin-right: 50px;
 }
+.center{
+	text-align:center;
+}
+/*}*/
